# AlgaProjects

./: .env.example  README.md  docker-compose.yaml
src/: Dockerfile  pyproject.toml
src/app/: __main__.py
src/app/core/: crud.py  db.py  dependencies.py
src/app/handlers/: add_task_to_backlog.py  add_token.py  start.py
src/app/jinja_templates/: start.j2
src/app/middlewares/: notion_middleware.py
src/app/models/: db_models.py  models.py
src/app/utils/: notion.py
src/migration/: env.py
src/migration/versions/: 0c9e7b642fa2_initial_commit.py
