[tool.poetry]
name = "algaprojects"
version = "0.1.0"
description = ""
authors = ["algakz06 <77662392+algakz06@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.19"
requests = "^2.31.0"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
loguru = "^0.7.0"
jinja2 = "^3.1.2"
alembic = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
